--- a/styles.css
+++ b/styles.css
@@ -9,21 +9,23 @@ h1#menuTitle{
 .topnav {
     background-color: #333;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 #green {
-    background-color: #05ff16;
+    background-color: #070644;
 }
 /* #blue {
     background-color: blue;
 } */
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: right;
+    float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 21px;
 }
 
 /* Change the color of links on hover */
@@ -36,4 +38,9 @@ h1#menuTitle{
 .topnav a.active {
     background-color: #04AA6D;
     color: white;
+}
+img {
+    width: 20em;
+    
+
 }
